feat: 사용자 시간 조회 API 구현