@@ -74,16 +74,52 @@ class ReservationDaoTest {
         // then
         assertAll(
                 () -> assertThat(reservations.size()).isEqualTo(5),
-                () -> assertThat(reservations.get(0).getName()).isEqualTo("브라운"),
-                () -> assertThat(reservations.get(0).getDate()).isEqualTo(date),
+                () -> assertThat(reservations.getFirst().getName()).isEqualTo("브라운"),
+                () -> assertThat(reservations.getFirst().getDate()).isEqualTo(date),
 
-                () -> assertThat(reservations.get(0).getTime().getId()).isEqualTo(savedReservationTime.getId()),
-                () -> assertThat(reservations.get(0).getTime().getStartAt()).isEqualTo(savedReservationTime.getStartAt()),
+                () -> assertThat(reservations.getFirst().getTime().getId()).isEqualTo(savedReservationTime.getId()),
+                () -> assertThat(reservations.getFirst().getTime().getStartAt()).isEqualTo(savedReservationTime.getStartAt()),
 
-                () -> assertThat(reservations.get(0).getTheme().getId()).isEqualTo(savedTheme.getId()),
-                () -> assertThat(reservations.get(0).getTheme().getName()).isEqualTo(savedTheme.getName()),
-                () -> assertThat(reservations.get(0).getTheme().getDescription()).isEqualTo(savedTheme.getDescription()),
-                () -> assertThat(reservations.get(0).getTheme().getThumbnail()).isEqualTo(savedTheme.getThumbnail())
+                () -> assertThat(reservations.getFirst().getTheme().getId()).isEqualTo(savedTheme.getId()),
+                () -> assertThat(reservations.getFirst().getTheme().getName()).isEqualTo(savedTheme.getName()),
+                () -> assertThat(reservations.getFirst().getTheme().getDescription()).isEqualTo(savedTheme.getDescription()),
+                () -> assertThat(reservations.getFirst().getTheme().getThumbnail()).isEqualTo(savedTheme.getThumbnail())
+        );
+    }
+
+    @Test
+    void 테마_아이디와_선택_날짜에_해당하는_예약_목록을_조회한다() {
+        // given
+        LocalTime startAt = LocalTime.of(10, 0);
+        ReservationTime time = ReservationTime.createWithoutId(startAt);
+        ReservationTime savedReservationTime = timeDao.insert(time);
+
+        Theme theme = Theme.createWithoutId("방탈출1", "로지와 러키의 방탈출", "https:fsof/ommff");
+        Theme savedTheme = themeDao.insert(theme);
+
+        Theme theme2 = Theme.createWithoutId("방탈출2", "밤밤과 러로의 방탈출", "https:fsof/sdafjifdsmmff");
+        Theme savedTheme2 = themeDao.insert(theme2);
+
+        LocalDate date = LocalDate.of(2026, 5, 5);
+        reservationDao.insert(Reservation.createWithoutId("러키", date, savedReservationTime, savedTheme));
+        reservationDao.insert(Reservation.createWithoutId("로지", date, savedReservationTime, savedTheme2));
+
+        // when
+        List<Reservation> reservationsOnCondition = reservationDao.selectByThemeIdAndDate(savedTheme.getId(), date);
+
+        // then
+        assertAll(
+                () -> assertThat(reservationsOnCondition).hasSize(1),
+                () -> assertThat(reservationsOnCondition.getFirst().getName()).isEqualTo("러키"),
+                () -> assertThat(reservationsOnCondition.getFirst().getDate()).isEqualTo(date),
+
+                () -> assertThat(reservationsOnCondition.getFirst().getTime().getId()).isEqualTo(savedReservationTime.getId()),
+                () -> assertThat(reservationsOnCondition.getFirst().getTime().getStartAt()).isEqualTo(savedReservationTime.getStartAt()),
+
+                () -> assertThat(reservationsOnCondition.getFirst().getTheme().getId()).isEqualTo(savedTheme.getId()),
+                () -> assertThat(reservationsOnCondition.getFirst().getTheme().getName()).isEqualTo(savedTheme.getName()),
+                () -> assertThat(reservationsOnCondition.getFirst().getTheme().getDescription()).isEqualTo(savedTheme.getDescription()),
+                () -> assertThat(reservationsOnCondition.getFirst().getTheme().getThumbnail()).isEqualTo(savedTheme.getThumbnail())
         );
     }
 
